<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvContent"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:text="@string/textview_content"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:background="@drawable/border_background">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imvCover"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:background="#000"/>

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/deal_area"
                    android:tint="#F0441D"/>

                <TextView
                    android:id="@+id/tvDeal"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:rotation="-45"
                    android:text="-20%"
                    android:textStyle="bold"
                    android:textColor="#fff"
                    android:textSize="15sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:text="Buffet"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    android:padding="5dp"
                    android:background="#C69402"/>

            </RelativeLayout>

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="#7B7D7B"
                android:textColor="#fff"
                android:text="@string/textview_name"
                android:paddingLeft="5dp"
                android:gravity="center_vertical"
                android:textStyle="bold"/>
            
            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:lines="2"
                android:ellipsize="end"
                android:padding="5dp"
                android:textColor="#BDBDBD"
                android:text="@string/textview_description"/>

            <TextView
                android:id="@+id/tvCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/textview_category"/>
        </LinearLayout>

        <TextView
            android:id="@+id/btnShowDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/showdetail"
            fontPath="fonts/Roboto-Bold.ttf"
            android:padding="10dp"
            android:textColor="#fff"
            android:textSize="13sp"
            android:textStyle="bold"
            android:background="@drawable/corner_background"
            />
    </LinearLayout>
</ScrollView>
